--- a/ginArticles/templates/menu.html
+++ b/ginArticles/templates/menu.html
@@ -6,6 +6,7 @@
       </a>
     </div>
     <ul class="nav navbar-nav">
+        <li><a href="/article/create">Create Article</a></li>
         <li><a href="/u/register">Register</a></li>
         <li><a href="/u/login">Login</a></li>
         <li><a href="/u/logout">Logout</a></li>
